# sdl2-rs-physics

./: Cargo.toml  README.md
archive/: body_docs.rs  tree.rs
src/: .template.rs  common.rs  main.rs
src/app/: engine.rs  mod.rs  render.rs  ssm.rs  video.rs
src/app/collision/: detector.rs  mod.rs  resolver.rs
src/app/objects/: body.rs  collection.rs  mod.rs
