[package]
name = "physics-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
rand = "0.9.0-alpha.1"
#sdl2 = "0.36.0"

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["gfx"]
